# out-of-this-world

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_DEMO.md  SECURITY.md  package-lock.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: frame_adapter.py  main.py  models.py  routes.py
configs/: classical.yaml  quantum.yaml
demos/: __init__.py
demos/investor_visuals/: __init__.py  data_generation.py  generate_all.py  manim_animations.py  plotly_3d_demo.py  static_charts.py
demos/investor_visuals/web_demo/: index.html  package.json
demos/investor_visuals/web_demo/public/: demo_data.json
demos/investor_visuals/web_demo/src/: App.jsx  Controls.jsx  SpacecraftScene.jsx
demos/outputs/slides/: index.html  pitch.md
demos/outputs/videos/videos/manim_animations/1080p60/partial_movie_files/CosmicCompassExplainer/: partial_movie_file_list.txt
docs/: ARCHITECTURE.md  BOM.md  CONCEPT.md  GLOSSARY.md  RISK_REGISTER.md  ROADMAP.md  experiments.md  method.md  quantum-imu-model.md  results.md
results/: .gitkeep  comparison.md
scripts/: demo_run.py
src/outofthisworld/: __init__.py  api_models.py  cli.py  config.py
src/outofthisworld/estimation/: __init__.py  gravity_measurements.py  ins_ekf.py  kalman.py  measurement_types.py
src/outofthisworld/output/: __init__.py  plots.py  reports.py
src/outofthisworld/physics/: __init__.py  constants.py  orbital.py  relativity.py  units.py
src/outofthisworld/sensors/: __init__.py  imu.py  imu_6dof.py  imu_profiles.py  interferometer.py  noise.py  star_tracker.py
src/outofthisworld/sim/: __init__.py  experiments.py  runner.py  scenario.py
tests/: __init__.py  test_api_frames.py  test_frame_serialization.py  test_gravity_measurements.py  test_imu_6dof.py  test_ins_ekf.py  test_integration.py  test_kalman.py  test_noise.py  test_orbital.py  test_orbital_j2.py  test_star_tracker.py  test_units.py
web/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.css  App.tsx
web/src/api/: sim.test.ts  sim.ts
web/src/components/: ConfigPanel.css  ConfigPanel.tsx  ErrorCharts.css  ErrorCharts.tsx  ResultsTable.css  ResultsTable.tsx  SceneHost.tsx  TrajectoryViewer.css  TrajectoryViewer.tsx
web/src/hooks/: useSimulation.ts  useSimulationPlayback.test.ts  useSimulationPlayback.ts
web/src/types/: sim.ts  simulation.ts
